@@ -1,6 +1,11 @@
 2006-01-14  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extractor.c:
+	It's aliiiiiive!
+
+2006-01-14  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.c:
 	Fix Date metadata.
 
 2006-01-14  Ross Burton  <ross@burtonini.com>
